# ComputerVisionWork

./: .gitignore  README
Tests/: generate_perfect_homography_points.m  testHomographyPart1.cpp  testHomographyPart2.cpp
imageReconstruction/: fundamentalMatrix.hpp  homography.hpp  optimizationAndApproximation.hpp  preprocessing.hpp  triangulationMethods.hpp
slamming/: CMakeLists.txt
slamming/scripts/: 3d_motion_no_noise.txt  3d_motion_noisy.txt  generate_3d_motion.m
slamming/src/: backend.cpp  backend.h  landmark_3d_error_term.h  motionEstimation.cpp  read_g20.h  types.h  types2.h
